add alt description for images

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <div class="tajam">
           <div class="tajam_lorem">
             <div class="logo">
-              <img src="../assets/images/png/logo.png" alt="" />
+              <img src="../assets/images/png/logo.png" alt="tajam logo" />
               <h2>tajam</h2>
             </div>
             <br />
@@ -366,7 +366,7 @@
             <div class="subscribe">
               <a href="#" class="button"> Subscribe our newsletter</a>
               <span><div class ="paper_container">
-                <img src="../assets/images/png/paper122.png" alt=""/></div></span>
+                <img src="../assets/images/png/paper122.png" alt="paper plane symbol"/></div></span>
             </div>
             <div class="media_logos">
               <img src="../assets/images/png/facebook.png" alt="" />
