link images correcty

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="video_section">
       <div class="video_container">
         <div class="play_button">
-          <img src="../assets/images/png/play.png" alt="Play Symbol" />
+          <img src="./assets/images/png/play.png" alt="Play Symbol" />
         </div>
         <h3 class="watch_invite">WATCH OUR STORY</h3>
       </div>
@@ -323,7 +323,7 @@
         <div class="tajam">
           <div class="tajam_lorem">
             <div class="logo">
-              <img src="../assets/images/png/logo.png" alt="tajam logo" />
+              <img src="./assets/images/png/logo.png" alt="tajam logo" />
               <h2>tajam</h2>
             </div>
             <br />
@@ -345,7 +345,7 @@
           </div>
           <div class="middle_container">
             <div class ="location">
-              <img src="../assets/images/png/big104.png" alt="Location symbol">
+              <img src="./assets/images/png/big104.png" alt="Location symbol">
               <div class ="location_adress">
                 <p>Ruko curuk, JI. Radio luar dalem jos</p>
                 <p>No.12 - 13, Kalideres - Jakarta Barat</p>
@@ -353,7 +353,7 @@
               </div>
             </div>
             <div class ="phone">
-              <img src="../assets/images/png/phone351.png" alt="phone symbol">
+              <img src="./assets/images/png/phone351.png" alt="phone symbol">
               <p>(+62) 21 - 2224 3333</p>
             </div>
           </div>
@@ -366,15 +366,15 @@
             <div class="subscribe">
               <a href="#" class="button"> Subscribe our newsletter</a>
               <span><div class ="paper_container">
-                <img src="../assets/images/png/paper122.png" alt="paper plane symbol"/></div></span>
+                <img src="./assets/images/png/paper122.png" alt="paper plane symbol"/></div></span>
             </div>
             <div class="media_logos">
-              <img src="../assets/images/png/facebook.png" alt="" />
-              <img src="../assets/images/png/twitter.png" alt="" />
-              <img src="../assets/images/png/dribble.png" alt="" />
-              <img src="../assets/images/png/instagram.png" alt="" />
-              <img src="../assets/images/png/gplus.png" alt="" />
-              <img src="../assets/images/png/youtube.png" alt="" />
+              <img src="./assets/images/png/facebook.png" alt="" />
+              <img src="./assets/images/png/twitter.png" alt="" />
+              <img src="./assets/images/png/dribble.png" alt="" />
+              <img src="./assets/images/png/instagram.png" alt="" />
+              <img src="./assets/images/png/gplus.png" alt="" />
+              <img src="./assets/images/png/youtube.png" alt="" />
             </div>
           </div>
           <p class="copyright">Copyright © 2015 - Tajem Creative</p>
