change subscribe to textbox

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <textarea
             id="message"
             name="Message"
-            placeholder="Massage"
+            placeholder="Message"
           ></textarea>
           <input class="button-submit" type="submit" value="Submit" />
         </form>
@@ -364,9 +364,12 @@
           </div>
           <div class="middle_container">
             <div class="subscribe">
-              <a href="#" class="button"> Subscribe our newsletter</a>
+              <form action="#" method ="POST" class ="subscribe_email">
+                <input type ="email" name="subscribe" placeholder="Subscribe our newsletter"/>
+              </form>
+              <!--<a href="#" class="button"> Subscribe our newsletter</a>-->
               <span><div class ="paper_container">
-                <img src="./assets/images/png/paper122.png" alt="paper plane symbol"/></div></span>
+                <input type= "image" src="./assets/images/png/paper122.png" alt="paper plane symbol"/></div></span>
             </div>
             <div class="media_logos">
               <img src="./assets/images/png/facebook.png" alt="" />
