--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
                 <input type= "image" src="./assets/images/png/paper122.png" alt="paper plane symbol"/></div></span>
             </div>
             <div class="media_logos">
-              <img src="./assets/images/png/facebook.png" alt="" />
-              <img src="./assets/images/png/twitter.png" alt="" />
-              <img src="./assets/images/png/dribble.png" alt="" />
-              <img src="./assets/images/png/instagram.png" alt="" />
-              <img src="./assets/images/png/gplus.png" alt="" />
-              <img src="./assets/images/png/youtube.png" alt="" />
+              <a href="#"><img src="./assets/images/png/facebook.png" alt="" /></a>
+              <a href="#"><img src="./assets/images/png/twitter.png" alt="" /></a>
+              <a href="#"><img src="./assets/images/png/dribble.png" alt="" /></a>
+              <a href="#"><img src="./assets/images/png/instagram.png" alt="" /></a>
+              <a href="#"><img src="./assets/images/png/gplus.png" alt="" /></a>
+              <a href="#"><img src="./assets/images/png/youtube.png" alt="" /></a>
             </div>
           </div>
           <p class="copyright">Copyright © 2015 - Tajem Creative</p>
